--- a/caixiaoer/菜小二店面管理系统/菜小二店面管理系统/菜小二店面管理系统.vbproj
+++ b/caixiaoer/菜小二店面管理系统/菜小二店面管理系统/菜小二店面管理系统.vbproj
@@ -98,8 +98,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite">
-      <HintPath>..\..\数据库同步\数据库同步\bin\System.Data.SQLite.dll</HintPath>
+    <Reference Include="System.Data.SQLite, Version=1.0.93.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Deployment" />
     <Reference Include="System.DirectoryServices" />
